--- a/package.json
+++ b/package.json
@@ -5,10 +5,29 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "files": ["src", "README.md"],
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui"
+  },
   "dependencies": {
     "@z-os/ui": "4.2.0",
     "@z-os/sdk": "4.2.0",
     "@z-os/apps": "4.2.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
