--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@z-os/desktop",
   "version": "4.2.0",
+  "type": "module",
   "description": "zOS Desktop Environment - Dock, MenuBar, Window Manager",
   "main": "src/index.ts",
   "types": "src/index.ts",
